fix(text-styles): use correct weight for heading 2 on small screens
affects: @fremtind/jkl-core

--- a/packages/core/mixins/_text-style.scss
+++ b/packages/core/mixins/_text-style.scss
@@ -32,7 +32,7 @@ $_text-styles: (
         "small-screen": (
             font-size: typography.$font-size-5,
             line-height: typography.$line-height-3,
-            font-weight: typography.$weight-bold,
+            font-weight: typography.$weight-normal,
         ),
         "large-screen": (
             font-size: typography.$font-size-8,
